<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_beige"
    android:orientation="vertical"
    tools:context=".NewPlaceActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/mintzatu_orange"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/informazioa" />

            <EditText
                android:id="@+id/izena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/izena" >
            </EditText>

            <EditText
                android:id="@+id/kategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/kategoria" >
            </EditText>

            <EditText
                android:id="@+id/helbidea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/helbidea" >
            </EditText>

            <EditText
                android:id="@+id/town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/town" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/kokapena" />

            <LinearLayout
                android:layout_width="258dp"
                android:layout_height="158dp"
                android:layout_gravity="center"
                android:background="@color/background_beige_light"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/staticMap"
                    android:layout_width="250dp"
                    android:layout_height="150dp" >
                </ImageView>
            </LinearLayout>

            <Button
                android:id="@+id/gehitu"
                style="@style/ButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/buttom_selector_blue"
                android:text="@string/lekuaGehitu" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>