<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_beige"
    android:orientation="vertical"
    android:padding="15dp" >

    <EditText
        android:id="@+id/posta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/round_rec_edittext"
        android:hint="@string/posta"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/edittext_text_color" />

    <EditText
        android:id="@+id/ezizena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/round_rec_edittext"
        android:hint="@string/ezizena"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/edittext_text_color" />

    <EditText
        android:id="@+id/pasahitza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/round_rec_edittext"
        android:hint="@string/pasahitza"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/edittext_text_color" />

    <EditText
        android:id="@+id/pasahitzaBerriro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/round_rec_edittext"
        android:hint="@string/pasahitza2"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/edittext_text_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="2dp" >

        <com.facebook.widget.LoginButton
            xmlns:fb="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:contentDescription="Erregistratu"
            android:scaleType="centerInside"
            fb:login_text="Facebook-ekin Erregistratu"
            fb:logout_text="Facebook-ekin Erregistratu" />

        <LinearLayout
            android:id="@+id/layoutFbSignIn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:orientation="vertical" >
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="invisible" >
        </ProgressBar>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/background_beige"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnEzeztatu"
            style="@style/ButtonBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttom_selector_light"
            android:text="@string/ezeztatu" />

        <Button
            android:id="@+id/btnErregistratu"
            style="@style/ButtonBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttom_selector_blue"
            android:text="@string/erregistratu" />
    </LinearLayout>

</LinearLayout>