<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_beige"
    android:orientation="vertical"
    android:padding="15dp" >

    <EditText
        android:id="@+id/posta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/round_rec_edittext"
        android:hint="@string/posta"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:text=""
        android:textColorHint="@color/edittext_text_color"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/pasahitza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rec_edittext"
        android:hint="@string/pasahitza"
        android:inputType="textPassword"
        android:padding="10dp"
        android:text=""
        android:textColorHint="@color/edittext_text_color"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center" >

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" >
        </ProgressBar>
        <TextView 
            android:id="@+id/txtBerreskuratu"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            style="@style/nameTitle"
            android:text="Pasahitza ahaztu duzu?"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/background_beige"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnEzeztatu"
            style="@style/ButtonBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttom_selector_light"
            android:text="@string/ezeztatu" />

        <Button
            android:id="@+id/btnSartu"
            style="@style/ButtonBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttom_selector_blue"
            android:text="@string/sartu" />
    </LinearLayout>

</LinearLayout>