<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewSwitcher1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_beige_light" >

    <!-- <include layout="@layout/loading_view" /> -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/mintzatu_orange"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_profile"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/lekuaArgazkia"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:scaleType="center"
                        android:src="@drawable/placeholder_image" />

                    <TextView
                        android:id="@+id/izena"
                        style="@style/nameTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="10dp"
                        android:text=""
                        android:textColor="#FFF"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/mintzatu_orange"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/textBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_beige_light"
                    android:orientation="vertical"
                    android:paddingBottom="6dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/azalpena"
                            android:layout_width="0dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/edittext_border"
                            android:ems="10"
                            android:inputType="textMultiLine"
                            android:maxLength="140"
                            android:maxLines="7"
                            android:nextFocusLeft="@+id/azalpena"
                            android:nextFocusUp="@id/azalpena"
                            android:padding="10dp" >
                        </EditText>

                        <ImageButton
                            android:id="@+id/takePhoto"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/buttom_selector"
                            android:src="@drawable/ic_menu_camera" />
                    </LinearLayout>

                    <TextView
                        style="@style/normalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/aholkua"
                        android:textSize="12sp"
                        android:visibility="invisible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/background_beige"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="Lagunekin banatu" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical" >

                            <ToggleButton
                                android:id="@+id/toggleButton1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_margin="5dp"
                                android:background="#0086b5"
                                android:disabledAlpha="0.5"
                                android:text="ToggleButton"
                                android:textColor="@android:color/white"
                                android:textOff="@string/ez"
                                android:textOn="@string/bai" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sareakLayout"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/background_beige"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:visibility="invisible" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="Banatu" />

                        <RelativeLayout
                            android:id="@+id/sareak"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical" >

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:orientation="horizontal" >

                                <ImageButton
                                    android:id="@+id/twitter"
                                    android:layout_width="33dp"
                                    android:layout_height="33dp"
                                    android:layout_marginRight="5dp"
                                    android:background="@android:color/darker_gray"
                                    android:scaleType="center"
                                    android:src="@drawable/twitter" />
                            </LinearLayout>
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/checkin"
                style="@style/ButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Check-in" />
        </LinearLayout>
    </ScrollView>

</ViewSwitcher>